--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DOM to ASCII",
   "main": "domscii.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "spec/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,10 @@
   "homepage": "https://github.com/dbkaplun/domscii#readme",
   "dependencies": {
     "html2canvas": "^0.5.0-alpha2"
+  },
+  "devDependencies": {
+    "express": "^4.13.3",
+    "nightmare": "^2.0.7",
+    "tape": "^4.2.2"
   }
 }
